--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </nav>
 <div class="main" id="section1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <br><br><br>
-    <img class="image" src="/inc/assetsrisal.png.png">
+    <img class="image" src="/inc/assets/risal.png.png">
     <section1>
         <br>
         <a href="#section1"><h2>Mohammed Risal</h2></a><br>
