--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section1>
         <br>
         <a href="#section1"><h2>Mohammed Risal</h2></a><br>
-        <p class="line-1 anim-typewriter">I'm a frontend Developer!</p>
+        <p class="line-1 anim-typewriter">I'm an Frontend Developer!</p>
     </section1>
 </div>
 <div class="about me" id="section2">
