--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Responsive Navigation Bar</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
-<link rel="stylesheet" href="C:\Users\user\project\inc-main\exapme.css">
+<link rel="stylesheet" href="/inc/css/exapme.css">
 </head>
 <body>
 <nav>
@@ -25,7 +25,7 @@
 </nav>
 <div class="main" id="section1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <br><br><br>
-    <img class="image" src="C:\Users\user\project\inc-main\project\assets\risal.png.png">
+    <img class="image" src="/inc/assets/risal.png.png">
     <section1>
         <br>
         <a href="#section1"><h2>Mohammed Risal</h2></a><br>
@@ -49,11 +49,11 @@
     <h2>My Projects</h2>
     
         <div class="img-container">
-            <a href="https://github.com/richuris03/face-recognition-attendance-system-using-python"><img src="C:\Users\user\project\inc-main\project\assets\facial-recognition-software.jpg" height="180px" width="180px">
+            <a href="https://github.com/richuris03/face-recognition-attendance-system-using-python"><img src="/inc/assets/facial-recognition-software.jpg" height="180px" width="180px">
                 <p>Face Recognition <br>Attendance System</p></a>
 
                 <br>
-                <a href="https://en.wikipedia.org/wiki/Sport_management"><img src="C:\Users\user\project\inc-main\project\assets\sport management system.png" height="180px" width="180px">
+                <a href="https://en.wikipedia.org/wiki/Sport_management"><img src="/inc/assets/sport management system.png" height="180px" width="180px">
                     <p>Sport Management <br>System</p></a>
 
                 
