--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
              <a href="#" title="twitter">
                 <i class="fa fa-twitter-square" aria-hidden="true"></i>
             </a>
-            <a href="https://www.instagram.com/risaaaaaaaaaaal/" title="instagram">  
+            <a href="https://www.instagram.com/risa_al_/" title="instagram">  
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
             <a href="https://in.linkedin.com/in/mohammed-risal-9a1682225" title="linkedin">
